--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 
-	<script type="text/javascript" src="js/scripts.js"></script>
+	<script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
